--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -24,6 +24,8 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 /* ===== Sticky Footer Trick ===== */
 
 .wrapper {
+	position: relative;
+	overflow: hidden;
 	min-height: 100%;
 	height: auto !important; /* for older versions of IE */
 	height: 100%;
