--- a/app/views/news/edit.html.erb
+++ b/app/views/news/edit.html.erb
@@ -9,9 +9,9 @@
 			<div class="form-inputs">
 				<%= f.input :title, :required => true, label: 'Title' %>
 				<%= f.input :summary, :required => true, label: 'Summary' %>
-				<%= f.input :image, as: :file, :required => true, label: 'Image' %>
+				<%= f.input :image, as: :file, label: 'Image' %>
 				<%= f.input :body, :required => true, label: 'Content', as: :ckeditor, input_html: { ckeditor: { height: 300 } } %>
-				<%= f.input :published_at, :as => :date_picker, :required => true, label: 'Publish at', :input_html => {:class => 'col-span-3 form-control'} %>
+				<%= f.input :published_at, :as => :datetime_picker, :required => true, label: 'Publish at', :input_html => {:class => 'col-span-3 form-control'} %>
 			</div>
 
 			<br/>
