--- a/app/views/layouts/_chat.html.erb
+++ b/app/views/layouts/_chat.html.erb
@@ -23,7 +23,7 @@
     <div data-chat-window></div>
   </div>
 
-   <div class="chat-box-bot">
+   <div class="chat-box-bot hidden">
     <ul>
       <li class="chat-user-item box" ng-class="{'chat-open': win.window.visible, 'chat-close': !win.window.visible}" ng-repeat="win in openWindows">
         <div class='chat-window' ng-show="win.window.visible">
