redis config & chat url in env config

--- a/app/assets/javascripts/chat.js.coffee.erb
+++ b/app/assets/javascripts/chat.js.coffee.erb
@@ -1,5 +1,5 @@
 jQuery ->
-	window.chatController = new Chat.Controller('msg.drs.local/websocket', true)
+	window.chatController = new Chat.Controller("<%= Drs::Application.config.chat_service_url %>/websocket", true)
 	
 $(document).ready ->
 	setTimeout ->
