--- a/app/views/dashboard/search/_job_item.html.erb
+++ b/app/views/dashboard/search/_job_item.html.erb
@@ -1,4 +1,4 @@
-<span class="label label-info search-label">Job</span><h3><%= link_to object.title, jobs_path(object) %></h3>
+<span class="label label-info search-label">Job</span><h3><%= link_to object.title, object %></h3>
 
 <ul class="search-job-details pull-left">
 	<li>Company: <span><%= object.company_name %></span></li>
