--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -28,7 +28,7 @@
 		<hr/>
 
 		<div class="supplier-description">
-			<%= @supplier.description %>
+			<%= raw(@supplier.description) %>
 		</div>
 	</div>
 </div>
