--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -12,7 +12,8 @@
 				<%= f.input :company_name, :required => true, label: 'Company name' %>
 				<%= f.input :title, :required => true, label: 'Job title' %>
 				<%= f.input :description, :required => true, label: 'Description', as: :ckeditor, input_html: { ckeditor: { height: 300 } } %>
-				<%= f.input :country, :required => true, label: 'Country' %>
+				<%= f.input :image, as: :file, :required => false, label: 'Image' %>
+				<%= f.input :country, :required => true, label: 'Country', include_blank: false %>
 				<%= f.input :city, :required => true, label: 'City' %>
 
 				<%= f.input :type, collection: [['Full time',1],['Part time',2]], label: 'Type', include_blank: false %>
