--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -10,14 +10,19 @@
 
 		<%= paginate @suppliers %>
 		
-		<ul class="suppliers-list">
+		<div class="suppliers-list row col-sm-12">
 			<% @suppliers.each do |supplier| %>
-				<li class="supplier-item">
-					<a href="<%= supplier_path(@country,supplier) %>"><h4><%= supplier.name %></h4></a>
-					<p class="supplier-item-location"><span class="supplier-item-location"><%= supplier.name %></span> in <span class="supplier-item-location"><%= "#{supplier.city}, #{supplier.country}" %></span></p>
-					<span class="supplier-item-time">Posted on <i><%= supplier.created_at.to_formatted_s(:date) %></i> by <%= link_to supplier.user.full_name, user_path(supplier.user) %></span>
-				</li>
+				<div class="supplier-item col-sm-6">
+					<div class="supplier-logo">
+						<%= link_to image_tag(supplier.image.url(:thumb)), supplier %>
+					</div>
+					<div class="supplier-details">
+						<a href="<%= supplier_path(@country,supplier) %>"><h4><%= supplier.name %></h4></a>
+						<p class="supplier-item-location"><span class="supplier-item-location"><%= supplier.name %></span> in <span class="supplier-item-location"><%= "#{supplier.city}, #{supplier.country}" %></span></p>
+						<span class="supplier-item-time">Posted on <i><%= supplier.created_at.to_formatted_s(:date) %></i> by <%= link_to supplier.user.full_name, user_path(supplier.user) %></span>
+					</div>
+				</div>
 			<% end %>
-		</ul>
+		</div>
 	</div>
 </div>
