--- a/app/views/bad_customers/index.html.erb
+++ b/app/views/bad_customers/index.html.erb
@@ -5,7 +5,7 @@
 		<h2 class="hl top-zero">Blacklist</h2>
 		<hr/>
 
-		<%= link_to 'Add new job offer', new_bad_customer_path %>
+		<%= link_to 'Add new customer to blacklist', new_bad_customer_path %>
 		<br/>
 
 		<%= paginate @customers %>
