--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,9 @@
 <% content_for :page_location, "Edit profile" %>
 
 <div class="row">
-  <div class="col-sm-8 col-md-6">
+  <%= render partial: 'users/edit_profile_tabs', locals: { active: 'profile' } %>
+
+  <div class="col-sm-5">
     <h3 class="hl">Edit profile <small><%= current_user.full_name %></small></h3>
     <p class="text-muted">Please fill out the form below to update your profile.</p>
     <hr>
