--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -12,12 +12,20 @@
 
 <div class="profile-container row">
 	<div class="profile-info col-sm-2">
-		<%= link_to image_tag("/profile_pictures/#{@user.get_profile_picture}", class: 'profile-picture'), @user %>
+		<%=
+			classes = ['profile-picture']
+			classes.push 'profile-picture-online' if @user.is_online? && !@user.chat_is_invisible?
+			link_to image_tag("/profile_pictures/#{@user.get_profile_picture}", class: classes.join(' ')), @user
+		%>
 		<p class="profile-info-name"><%= @user.full_name %></p>
 		<p class="profile-info-specialization"><%= @user.specialization %></p>
 		<p class="profile-info-location"><%= location_for(@user) %></p>
 		<br/>
 		<%= render 'shared/followers_stats' %>
+
+		<% if !current_user?(@user) && @user.is_online? %>
+			<a href="#" class="btn btn-sm btn-primary btn-chat" data-uid="<%= @user.id %>">Chat</a>
+		<% end %>
 	</div>
 	<div class="profile-feed-container col-sm-7" ng-controller="FeedController">
 		<% if @no_forms.nil? %>
