--- a/app/assets/stylesheets/offers.css.scss
+++ b/app/assets/stylesheets/offers.css.scss
@@ -14,6 +14,14 @@
 				font: 14px/16px "PTSerif",Georgia,serif;
 				color: #999;
 			}
+
+			.offer-image-link {
+				img {
+					max-width: 80px;
+					max-height: 80px;
+					margin-right: 10px;
+				}
+			}
 		}
 	}
 }
@@ -43,21 +51,26 @@
 		margin-right: 5px;
 	}
 	.offer-info {
-		ul {
-			margin: 0;
-			padding: 0;
-			list-style: none;
-			li {
-				display: inline;
-				margin-left: 20px;
+		table {
+			width: 100%;
+			border: 0px none;
+			border-collapse: collapse;
+			font-size: small;
+
+			.offer-cname {
 				font-weight: bold;
-
-				&:first-child {
-					margin-left: 0px;
-				}
-
-				span {
-					font-weight: normal;
+				padding: 1px 0px;
+				width: 15%;
+			}
+			.offer-cvalue {
+				width: 35%;
+			}
+			.offer-image {
+				padding: 5px;
+				text-align:center;
+				img {
+					max-width: 80px;
+					max-height: 80px;
 				}
 			}
 		}
