--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-sm-12 offer-box">
-		<h2 class="hl top-zero"><%= @offer.title %></h2>
+		<h2 class="hl top-zero"><span>[<%= ['', 'Selling', 'Buying', 'Rental'][@offer.type] %>]</span> <%= @offer.title %></h2>
 		<hr/>
 
 		<div class="offer-links">
@@ -12,15 +12,22 @@
 		<hr/>
 
 		<div class="offer-info">
-			<ul>
-				<li>Type: <span><%= ['', 'Selling', 'Buying', 'Rental'][@offer.type] %></span></li>
-				<li>Contact e-mail: <span><%= @offer.contact_email %></span></li>
-				<li>Contact phone: <span><%= @offer.contact_phone %></span></li>
-			</ul>
-			<ul>
-				<li>Views: <span><%= @offer.views %></span></li>
-				<li>Posted by: <span><%= link_to @offer.user.full_name, user_path(@offer.user) %></span></li>
-			</ul>
+			<table>
+				<tbody>
+					<tr>
+						<% unless @offer.image_file_name.nil? %>
+							<td class="offer-image" rowspan="4"><a class="offer-image-link" href="<%= @offer.image.url(:large) %>"><%= image_tag @offer.image.url(:thumb) %></a></td>
+						<% end %>
+						<td class='offer-cname' align="left">Contact e-mail:</td><td class='offer-cvalue'><%= @offer.contact_email.blank? ? 'nespecificat' : @offer.contact_email %></td>
+						<td class='offer-cname' align="left">Contact phone:</td><td class='offer-cvalue'><%= @offer.contact_phone.blank? ? 'nespecificat' : @offer.contact_phone %></td>
+					</tr>
+					<tr>
+						<td class='offer-cname' align="left">Views:</td><td class='offer-cvalue'><%= @offer.views %></td>
+						<td class='offer-cname' align="left">Postred by:</td><td class='offer-cvalue'><%= link_to @offer.user.full_name, user_path(@offer.user) %></td>
+					</tr>
+					<tr><td colspan="4">&nbsp;</td></tr>
+				</tbody>
+			</table>
 		</div>
 
 		<hr/>
