--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -12,7 +12,7 @@
 		
 		<ul class="offers-list">
 			<% @offers.each do |offer| %>
-				<li class="offer-item">
+				<li class="offer-item clearfix">
 					<a href="<%= offer_path(offer) %>"><h4><span>[<%= ['', 'Selling', 'Buying', 'Rental'][offer.type] %>]</span> <%= offer.title %></h4></a>
 
 					<span class="offer-item-time">Posted <i><%= time_ago_in_words(offer.created_at) %></i> ago by <%= link_to current_user.full_name, user_path(current_user) %></span>
